css/style.css
body {
  font-family: 'Roboto', sans-serif;
}
header {
  width: 100%;
  height: 145px;
  position: relative;
  background: rgba(255, 255, 255, 1.0);
  -webkit-box-shadow: 0px 1px 5px 0px rgba(87,87,87,1);
-moz-box-shadow: 0px 1px 5px 0px rgba(87,87,87,1);
box-shadow: 0px 1px 5px 0px rgba(87,87,87,1);
}
header h1 {
  margin-top: 150px;
}
header .top-margin {
  margin-top: 0px;
}
header .large-7.columns.top-menu {
  margin-top: 65px;
  margin-left: 16px;
   width: 48.0%;
}

.margin-title {
  margin-top: 200px;
}


.large-2.columns.top-menu {
    margin-top: 42px;
    width: 15%;
    vertical-align: middle;
}

.large-8.columns.top-margin {
    width: 100%;

}


.large-3.columns {
  width: 18.0%;
  margin-top: 12px;
}


header .top-menu {
  font-family: 'Roboto', sans-serif;
}
header .top-menu ul {
  text-align: center;
}
header .top-menu li {
  float: left;
  list-style: none;
  margin-right: 20px;
}
header .top-menu .call-to-action {
  color: #fff;
  background: #b92e81;
  padding: 5px 10px 5px 10px;
  -webkit-box-shadow: 1px 1px 7px 0px rgba(87,87,87,1);
-moz-box-shadow: 1px 1px 7px 0px rgba(87,87,87,1);
box-shadow: 1px 1px 7px 0px rgba(87,87,87,1);
}
header .logo {
  margin-top: 42px;
  margin-left: 24px;
}
header .partner {
  width: 110px;
}
@media only screen and (max-width: 24em) {
  header .partner {
    width: 80px;
  }
}
header .logo-menu {
  margin-top: 10px;
}
header .main-logo {
  width: auto;
}
header .long-logo {
  width: 120px;
}
header .third-logo {
  margin: auto;
  margin-top: 4px;
}
header h4 {
  font-family: 'Roboto', sans-serif;
  color: #585758;
  font-size: 18px;
}
@media only screen and (max-width: 64em) {
  header h4 {
    margin-top: 1em;
  }
}
header a {
  color: #585758;
}
header a:hover {
  color: #b92e81;
}
header a.current {
  text-decoration: underline;
  color: #b92e81;
}
section.title {
  color: white;
  text-shadow: 0 0 3px #ccc;
  background: rgba(0, 0, 0, 0.43);
  height: 71.65vw;
}
section.title h1 {
  font-family: 'Roboto', sans-serif;
  color: #FFFFFF;
  text-align: center;
  padding: 20px;
  font-size: 48px;
}
section.title h2 {
  font-family: 'Roboto', sans-serif;
  color: #FFFFFF;
  text-align: center;
  margin-top: 0px

}
section.title h2 b {
  display: inline-block;

}
section.title .center {
  text-align: center;
}
@media only screen and (min-width: 64.063em) {
  section.title .top-margin {
    margin-top: 20px;
  }
}
section.title-text {
  color: white;
  
}
section.title-text p {
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  text-shadow: 0 0 1px #000;
  color: white;


}
@media only screen and (max-width: 64em) {
  section.title-text p {
    text-align: justify;
    padding: 16px;
  }
}
section.title-text p .call-to-action {
  color: #fff;
  background: #b92e81;
  padding: 5px 10px 5px 10px;
  -webkit-box-shadow: 5px 5px 7px 0px rgba(87,87,87,1);
-moz-box-shadow: 5px 5px 7px 0px rgba(87,87,87,1);
box-shadow: 5px 5px 7px 0px rgba(87,87,87,1);}
section.title-text .top-margin {
  margin-top: 50px;
}
section.title-text .content-box {
  background: rgba(67, 123, 35, 0.91);
  padding: 26px;
}
section.title-text .title-image {
  background: url("../img/photo4.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 71.65vw;
  margin-top: -12vw;
  margin-bottom: -10vw;
}
@media only screen and (max-width: 64em) {
  section.title-text .title-image {
    height: 128.97vw;
    margin: -30vw 0 -15vw;
    background-size: 180%, 100%;
    background-position-x: 45%;
  }
}
.pink {
  color: #b92e81;
}
section.info .info-img {
  border: 3px solid #b92e81;
}
section.info h1 {
  font-family: 'Roboto', sans-serif;
  color: #585758;
}
section.info h2 {
  font-family: 'Roboto', sans-serif;
  color: #b92e81;
  font-size: 23px;
}
section.info a {
  color: #5b8543;
}
section.info .partner {
  height: 80px;
}
section.info .partner2 {
  height: 100px;
}
section.info p {
  text-align: justify;
}
section.info .call-to-action {
  background-color: #b92e81;
  color: white;
  padding: 10px;
  display: block;
  text-align: center;
}
section.program h1,
section.program h2,
section.program h4 {
  font-family: 'Roboto', sans-serif;
  color: #585758;
}
section.program h4 {
  margin-top: 10px;
  color: #b92e81;
}
section.program .photo {
  width: 400px;
  margin-bottom: 10px;
  border: 3px solid #b92e81;
}
section.czechitas h1,
section.czechitas h2,
section.czechitas h4 {
  font-family: 'Roboto', sans-serif;
  color: #585758;
}
section.czechitas a {
  color: #5b8543;
}
section.czechitas p {
  text-align: justify;
}
section.czechitas .call-to-action {
  background-color: #b92e81;
  color: white;
  padding: 10px;
  display: block;
  text-align: center;
}

